k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: morphit
  namespace: morphit
  labels:
    app: morphit
spec:
  type: ClusterIP
  selector:
    app: morphit
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
